--- a/index.html
+++ b/index.html
@@ -13,5 +13,19 @@
         <p>these springs foavorites had us at yellow</p>
         <a href="">shop the new collection</a>
     </div>
+
+    <div class="select1">
+        <div>
+        <select name="English ($)" id="choose">
+            <option value="">English ($)</option>
+            <option value="">USD ($)</option>
+            <option value="">English</option>
+            <option value="">French</option>
+        </select>
+        </div>
+        <div>
+            <a href=""><p>Sign In/Sign Up</p></a>
+        </div>
+    </div>
 </body>
 </html>
