--- a/index.html
+++ b/index.html
@@ -27,5 +27,158 @@
             <a href=""><p>Sign In/Sign Up</p></a>
         </div>
     </div>
+
+    <div class="logo">
+        <img src="./logo.png" alt="error" id="logo1">
+        <div class="search">
+        <input type="text" placeholder="Search FashionHub" name="search" style="border:none;width: 300px;"/>
+        <input type="submit" value="Search"  id="search1" style="border: none;background-color:rgb(4, 77, 77) ;color: white; width: 100px;"/>
+        </div>
+        <img src="./paymnt.jpg" alt="error" id="paymnt">
+    </div>
+
+    <hr style="line-height: -0.8px;">
+
+
+    <div class="dropdown" id="d">
+        <button class="dropbtn">New!</button>
+        <div class="dropdown-content">
+
+          <a href="#">Accessories</a>
+          <a href="#">Beauty & Wellness</a>
+          <a href="#">Clothing</a>
+          <a href="#">Dresses</a>
+          <a href="#">Jweleries</a>
+          <a href="#">Shoes</a>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button class="dropbtn">Dresses</button>
+        <div class="dropdown-content">
+
+          <a href="#">Wedding Dresses</a>
+          <a href="#">Midi Dresses</a>
+          <a href="#">Bridesmaid Dresses</a>
+          <a href="#">Plus Dresses</a>
+          <a href="#">Formal Dresses</a>
+          <a href="#">Maxi Dresses</a>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button class="dropbtn">Clothing</button>
+        <div class="dropdown-content">
+
+          <a href="#">Pants</a>
+          <a href="#">Shorts</a>
+          <a href="#">Skirts</a>
+          <a href="#">Sweaters</a>
+          <a href="#">Swimwears</a>
+          <a href="#">Jumpsuits</a>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button class="dropbtn">Shoes</button>
+        <div class="dropdown-content">
+
+          <a href="#">Boots & Booties</a>
+          <a href="#">Flats</a>
+          <a href="#">Sandal</a>
+          <a href="#">Slippers</a>
+          <a href="#">Sneakers</a>
+          <a href="#">Shoes</a>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button class="dropbtn">Accessories</button>
+        <div class="dropdown-content">
+
+          <a href="#">Hats</a>
+          <a href="#">Jweleries</a>
+          <a href="#">Scarves</a>
+          <a href="#">Socks & Tights</a>
+          <a href="#">Belts</a>
+          <a href="#">Bags</a>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button class="dropbtn">Weddings</button>
+        <div class="dropdown-content">
+
+          <a href="#">Flower Girl Dresses</a>
+          <a href="#">Wedding Guest Dresses</a>
+          <a href="#">Plus</a>
+          <a href="#">Accessories</a>
+          <a href="#">Shoes</a>
+          <a href="#">Mother Of The Bride</a>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button class="dropbtn">Home & Furniture</button>
+        <div class="dropdown-content">
+
+          <a href="#">Furnitures</a>
+          <a href="#">Kitchen & Dining</a>
+          <a href="#">Decor</a>
+          <a href="#">Stationary</a>
+          <a href="#">Outdoors</a>
+          <a href="#">Kids</a>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button class="dropbtn">Beauty & Wellness</button>
+        <div class="dropdown-content">
+
+          <a href="#">Tools & Brushes</a>
+          <a href="#">Beauty & Wellness</a>
+          <a href="#">Suncare</a>
+          <a href="#">Makeup Kit</a>
+          <a href="#">Skincare</a>
+          <a href="#">Nails</a>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button class="dropbtn">Garden & Outdoor</button>
+        <div class="dropdown-content">
+
+          <a href="#">Outdoor Living</a>
+          <a href="#">Furniture</a>
+          <a href="#">Plants & Flowers</a>
+          <a href="#">Planters</a>
+          <a href="#">Garden & Utilities</a>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button class="dropbtn">Gifts & Candles</button>
+        <div class="dropdown-content">
+
+          <a href="#">Shop All Gifts</a>
+          <a href="#">Candle Gifts & Sets</a>
+          <a href="#">Gifts For The Home</a>
+          <a href="#">Personalized & Monogram Gifts</a>
+          <a href="#">Explore All Gifts & Candles</a>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button class="dropbtn">Sale</button>
+        <div class="dropdown-content">
+
+          <a href="#">Shop All Sale</a>
+          <a href="#">Limited-Time Sale</a>
+          <a href="#">New Sale Styles</a>
+          <a href="#">Accessories</a>
+          <a href="#">Beauty & Wellness</a>
+          <a href="#">Clothing</a>
+        </div>
+    </div>
 </body>
 </html>
