--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indigo</title>
     <link rel="stylesheet" href="./style.css">
+    <!-- <link rel="icon" type="image/png" href="./mainlogo.png"> -->
 </head>
 <body>
     <div class="stick">
@@ -39,10 +40,10 @@
 
     <hr style="line-height: -0.8px;">
 
-
-    <div class="dropdown" id="d">
-        <button class="dropbtn">New!</button>
-        <div class="dropdown-content">
+    <div class="nav">
+    <div class="drop_down" id="d">
+        <button class="drop_button">New!</button>
+        <div class="dropdown_cont">
 
           <a href="#">Accessories</a>
           <a href="#">Beauty & Wellness</a>
@@ -53,9 +54,9 @@
         </div>
     </div>
 
-    <div class="dropdown">
-        <button class="dropbtn">Dresses</button>
-        <div class="dropdown-content">
+    <div class="drop_down">
+        <button class="drop_button">Dresses</button>
+        <div class="dropdown_cont">
 
           <a href="#">Wedding Dresses</a>
           <a href="#">Midi Dresses</a>
@@ -66,9 +67,9 @@
         </div>
     </div>
 
-    <div class="dropdown">
-        <button class="dropbtn">Clothing</button>
-        <div class="dropdown-content">
+    <div class="drop_down">
+        <button class="drop_button">Clothing</button>
+        <div class="dropdown_cont">
 
           <a href="#">Pants</a>
           <a href="#">Shorts</a>
@@ -79,9 +80,9 @@
         </div>
     </div>
 
-    <div class="dropdown">
-        <button class="dropbtn">Shoes</button>
-        <div class="dropdown-content">
+    <div class="drop_down">
+        <button class="drop_button">Shoes</button>
+        <div class="dropdown_cont">
 
           <a href="#">Boots & Booties</a>
           <a href="#">Flats</a>
@@ -92,9 +93,9 @@
         </div>
     </div>
 
-    <div class="dropdown">
-        <button class="dropbtn">Accessories</button>
-        <div class="dropdown-content">
+    <div class="drop_down">
+        <button class="drop_button">Accessories</button>
+        <div class="dropdown_cont">
 
           <a href="#">Hats</a>
           <a href="#">Jweleries</a>
@@ -105,9 +106,9 @@
         </div>
     </div>
 
-    <div class="dropdown">
-        <button class="dropbtn">Weddings</button>
-        <div class="dropdown-content">
+    <div class="drop_down">
+        <button class="drop_button">Weddings</button>
+        <div class="dropdown_cont">
 
           <a href="#">Flower Girl Dresses</a>
           <a href="#">Wedding Guest Dresses</a>
@@ -118,9 +119,9 @@
         </div>
     </div>
 
-    <div class="dropdown">
-        <button class="dropbtn">Home & Furniture</button>
-        <div class="dropdown-content">
+    <div class="drop_down">
+        <button class="drop_button">Home & Furniture</button>
+        <div class="dropdown_cont">
 
           <a href="#">Furnitures</a>
           <a href="#">Kitchen & Dining</a>
@@ -131,9 +132,9 @@
         </div>
     </div>
 
-    <div class="dropdown">
-        <button class="dropbtn">Beauty & Wellness</button>
-        <div class="dropdown-content">
+    <div class="drop_down">
+        <button class="drop_button">Beauty & Wellness</button>
+        <div class="dropdown_cont">
 
           <a href="#">Tools & Brushes</a>
           <a href="#">Beauty & Wellness</a>
@@ -144,9 +145,9 @@
         </div>
     </div>
 
-    <div class="dropdown">
-        <button class="dropbtn">Garden & Outdoor</button>
-        <div class="dropdown-content">
+    <div class="drop_down">
+        <button class="drop_button">Garden & Outdoor</button>
+        <div class="dropdown_cont">
 
           <a href="#">Outdoor Living</a>
           <a href="#">Furniture</a>
@@ -156,9 +157,9 @@
         </div>
     </div>
 
-    <div class="dropdown">
-        <button class="dropbtn">Gifts & Candles</button>
-        <div class="dropdown-content">
+    <div class="drop_down">
+        <button class="drop_button">Gifts & Candles</button>
+        <div class="dropdown_cont">
 
           <a href="#">Shop All Gifts</a>
           <a href="#">Candle Gifts & Sets</a>
@@ -168,9 +169,9 @@
         </div>
     </div>
 
-    <div class="dropdown">
-        <button class="dropbtn">Sale</button>
-        <div class="dropdown-content">
+    <div class="drop_down">
+        <button class="drop_button">Sale</button>
+        <div class="dropdown_cont">
 
           <a href="#">Shop All Sale</a>
           <a href="#">Limited-Time Sale</a>
@@ -179,6 +180,22 @@
           <a href="#">Beauty & Wellness</a>
           <a href="#">Clothing</a>
         </div>
+    </div>
+    </div>
+
+    <hr>
+
+
+    <div class="pic1">
+        <a href=""><img src="https://images.ctfassets.net/5de70he6op10/12Fav7kMsNCFfp6IlqCoHg/ea5ea1b9ecc44d58249cd482bc3a580d/473929275-ls_m0_banner_f.jpg?w=630&q=80&fm=webp" alt="err" id="i1"></a>
+        <a href=""><img src="https://images.ctfassets.net/5de70he6op10/1yCt23d6XxdmkjGohde5ev/97f13874f53c019005210e6a690f3836/473929257-ls_m0_banner_a.jpg?w=630&q=80&fm=webp" alt="err"></a>
+        <a href=""><img src="https://images.ctfassets.net/5de70he6op10/6sUQEatinxFVFTiPZ2WGFG/a0deaee57126fbd5c17e9be6f3f107a1/473929265-ls_m0_banner_b.jpg?w=630&q=80&fm=webp" alt="err"></a>
+        <a href=""><img src="https://images.ctfassets.net/5de70he6op10/5KjWlD2oXag0PlTbafqAWL/2a4e32e4cfc0b818e4cda11687d1498b/473929283-ls_m0_banner_h.jpg?w=630&q=80&fm=webp" alt="err"></a>
+    </div>
+
+
+    <div class="shop">
+      <button>shop dresses</button>
     </div>
 </body>
 </html>
