--- a/index.html
+++ b/index.html
@@ -195,7 +195,100 @@
 
 
     <div class="shop">
-      <button>shop dresses</button>
+      <button><a href="">shop dresses</a></button>
     </div>
+
+
+
+    <div class="three">
+      <div id="a1">
+      <button><a href="">shop new clothing</a></button>
+      </div>
+      <div id="a2">
+      <button><a href="">the getaway shop</a></button>
+      </div>
+      <div id="a3">
+      <button><a href="">shop swimwear</a></button>
+      </div>
+    </div>
+
+
+
+    <div class="four">
+        <div id="cp1">
+        <button><a href="">shop kitchen & dining</a></button>
+        </div>
+        <div id="cp2">
+        <button><a href="">shop furniture</a></button>
+        </div>
+    </div>
+
+
+
+    <div class="three1">
+      <div id="a11">
+      <button><a href="">shop spring entertaining essentials</a></button>
+      </div>
+      <div id="a22">
+      <button><a href="">shop tops</a></button>
+      </div>
+      <div id="a33">
+      <button><a href="">shop dresses</a></button>
+      </div>
+    </div>
+
+
+
+    <div class="shop1">
+      <button><a href="">shop weddings</a></button>
+    </div>
+
+
+
+
+    <div class="all">
+      <p>Top-Rated Picks</p>
+      <a href="">Shop All</a>
+    </div>
+
+
+    <hr style="margin-left: 40px;margin-right: 30px;">
+
+
+    <div class="f1">
+      <div>
+         <img src="https://images.ctfassets.net/5de70he6op10/1h9gkbrJB6rfKMEsrQsrlE/75fdaefe631d2d0e38d24b5e5d68ec10/473929238-ls_customerfave_a.jpg?w=630&q=80&fm=webp" alt="err">
+         <p>CUSTOMER FAVORITE</p>
+         <h3>The Marais Chiffon Maxi Dress</h3>
+         <p>★★★★★</p>
+         <p>Love - I have this in three colors. Why? Because you can throw it on, and the fit is seamless, it’s comfy it’s breezy.</p>
+         <a href="">shop now</a>
+      </div>
+      <div>
+        <img src="https://images.ctfassets.net/5de70he6op10/2bvup8dYlhV23fJF8JWtBi/f007eb7c84134bfe87c3dd3669ffd06f/473929242-ls_customerfave_b.jpg?w=630&q=80&fm=webp" alt="err">
+        <p>CUSTOMER FAVORITE</p>
+        <h3>The Super Mini Slouchy Bag</h3>
+        <p>★★★★★</p>
+        <p>Super cute, perfect little crossbody. Holds your phone, money, lipstick and keys.</p>
+        <a href="">shop now</a>
+      </div>
+      <div>
+        <img src="https://images.ctfassets.net/5de70he6op10/7e6CTKkxyvEGN65qcfAD6e/833ca12cd46657912e24e81a42fc086a/473929246-ls_customerfave_c.jpg?w=630&q=80&fm=webp" alt="err">
+        <p>CUSTOMER FAVORITE</p>
+        <h3>The Bennet Buttondown Shirt</h3>
+        <p>★★★★★</p>
+        <p>Oversized in the best way...it's a perfect cotton shirt.</p>
+        <a href="">shop now</a>
+      </div>
+      <div>
+        <img src="https://images.ctfassets.net/5de70he6op10/IRIRM5boIBRZTPtM9RGo2/d5a954acdea330f877f48ee00b9dd9e7/473929254-ls_customerfave_d.jpg?w=630&q=80&fm=webp" alt="err">
+        <p>CUSTOMER FAVORITE</p>
+        <h3>The Colette Wide-Leg Pants</h3>
+        <p>★★★★★</p>
+        <p>I LOVE THESE PANTS! They feel good on, whether I'm standing, sitting, or walking. Overall 10/10 would recommend!</p>
+        <a href="">shop now</a>
+      </div>
+    </div>
+
 </body>
 </html>
