--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Indigo</title>
     <link rel="stylesheet" href="./style.css">
     <!-- <link rel="icon" type="image/png" href="./mainlogo.png"> -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="stick">
@@ -26,6 +29,7 @@
         </div>
         <div>
             <a href=""><p>Sign In/Sign Up</p></a>
+            <!-- <button id="open-popup-btn">Log In & Sign In</button> -->
         </div>
     </div>
 
@@ -256,39 +260,128 @@
 
 
     <div class="f1">
-      <div>
+      <div class="f2">
          <img src="https://images.ctfassets.net/5de70he6op10/1h9gkbrJB6rfKMEsrQsrlE/75fdaefe631d2d0e38d24b5e5d68ec10/473929238-ls_customerfave_a.jpg?w=630&q=80&fm=webp" alt="err">
-         <p>CUSTOMER FAVORITE</p>
-         <h3>The Marais Chiffon Maxi Dress</h3>
+         <p class="p1">CUSTOMER  FAVORITE</p>
+         <h2>The Marais Chiffon Maxi Dress</h2>
          <p>★★★★★</p>
-         <p>Love - I have this in three colors. Why? Because you can throw it on, and the fit is seamless, it’s comfy it’s breezy.</p>
+         <p class="p2">Love - I have this in three colors. Why? Because you can throw it on, and the fit is seamless, it’s comfy it’s breezy.</p>
          <a href="">shop now</a>
       </div>
-      <div>
+      <div class="f2">
         <img src="https://images.ctfassets.net/5de70he6op10/2bvup8dYlhV23fJF8JWtBi/f007eb7c84134bfe87c3dd3669ffd06f/473929242-ls_customerfave_b.jpg?w=630&q=80&fm=webp" alt="err">
-        <p>CUSTOMER FAVORITE</p>
-        <h3>The Super Mini Slouchy Bag</h3>
+        <p class="p1">CUSTOMER  FAVORITE</p>
+        <h2>The Super Mini Slouchy Bag</h2>
         <p>★★★★★</p>
-        <p>Super cute, perfect little crossbody. Holds your phone, money, lipstick and keys.</p>
+        <p class="p2">Super cute, perfect little crossbody. Holds your phone, money, lipstick and keys.</p>
         <a href="">shop now</a>
       </div>
-      <div>
+      <div class="f2">
         <img src="https://images.ctfassets.net/5de70he6op10/7e6CTKkxyvEGN65qcfAD6e/833ca12cd46657912e24e81a42fc086a/473929246-ls_customerfave_c.jpg?w=630&q=80&fm=webp" alt="err">
-        <p>CUSTOMER FAVORITE</p>
-        <h3>The Bennet Buttondown Shirt</h3>
+        <p class="p1">CUSTOMER  FAVORITE</p>
+        <h2>The Bennet Buttondown Shirt</h2>
         <p>★★★★★</p>
-        <p>Oversized in the best way...it's a perfect cotton shirt.</p>
+        <p class="p2">Oversized in the best way...it's a perfect cotton shirt.</p>
         <a href="">shop now</a>
       </div>
-      <div>
+      <div class="f2">
         <img src="https://images.ctfassets.net/5de70he6op10/IRIRM5boIBRZTPtM9RGo2/d5a954acdea330f877f48ee00b9dd9e7/473929254-ls_customerfave_d.jpg?w=630&q=80&fm=webp" alt="err">
-        <p>CUSTOMER FAVORITE</p>
-        <h3>The Colette Wide-Leg Pants</h3>
+        <p class="p1">CUSTOMER  FAVORITE</p>
+        <h2>The Colette Wide-Leg Pants</h2>
         <p>★★★★★</p>
-        <p>I LOVE THESE PANTS! They feel good on, whether I'm standing, sitting, or walking. Overall 10/10 would recommend!</p>
+        <p class="p2">I LOVE THESE PANTS! They feel good on, whether I'm standing, sitting, or walking. Overall 10/10 would recommend!</p>
         <a href="">shop now</a>
       </div>
     </div>
 
+
+
+    <h3 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;font-weight: lighter; margin-top: 50px; margin-left: 35px;">You May Also Like</h3>
+
+    <hr style="margin-left: 35px; margin-right: 35px;">
+
+    <div class="container2">
+      <div class="slider2">
+          <a href=""><img src="https://belk.scene7.com/is/image/Belk?layer=0&src=3205465_RS2015_A_072_T10L00&layer=comp&$DWP_PRODUCT_REC_DESKTOP$" alt="">
+              <h4>Columbia Men's Big & Tall <br> Glennaker Lake Rain Jacket</h4>
+              <p>$59.99</p></a>
+              <a href=""> <img src="https://belk.scene7.com/is/image/Belk?layer=0&src=3205465_1698001_A_012&$DWP_PRODUCT_REC_DESKTOP$" alt="">
+                  <h4>Columbia Men's Big & Tall <br> Glennaker Lake Rain Jacket</h4>
+                  <p>$99.99</p></a>
+          <a><img src="https://belk.scene7.com/is/image/Belk?layer=0&src=3205465_1910711_A_464&$DWP_PRODUCT_REC_DESKTOP$" alt="">
+              <h4>Columbia Men's Big & Tall <br> Glennaker Lake Rain Jacket</h4>
+              <p>$59.99</p>
+          </a>
+          <a><img src="https://belk.scene7.com/is/image/Belk?layer=0&src=3205465_1911111_A_010&$DWP_PRODUCT_REC_DESKTOP$" alt="">
+              <h4>Columbia Men's Big & Tall <br> Glennaker Lake Rain Jacket</h4>
+              <p>$59.99</p>
+          </a>
+          <a><img src="https://belk.scene7.com/is/image/Belk?layer=0&src=3205465_1639261_A_691_T10L00&layer=comp&$DWP_PRODUCT_REC_DESKTOP$" alt="">
+              <h4>Columbia Men's Big & Tall <br> Glennaker Lake Rain Jacket</h4>
+              <p>$59.99</p>
+          </a>
+          <a><img src="https://belk.scene7.com/is/image/Belk?layer=0&src=3203786_11712041_A_001&$DWP_PRODUCT_REC_DESKTOP$" alt="">
+              <h4>Columbia Men's Big & Tall <br> Glennaker Lake Rain Jacket</h4>
+              <p>$59.99</p>
+          </a>
+          <a><img src="https://belk.scene7.com/is/image/Belk?layer=0&src=1801546_1771961_A_697_T10L00&layer=comp&$DWP_PRODUCT_REC_DESKTOP$" alt="">
+              <h4>Columbia Men's Big & Tall <br> Glennaker Lake Rain Jacket</h4>
+              <p>$59.99</p>
+          </a>
+          <a><img src="https://belk.scene7.com/is/image/Belk?layer=0&src=3203223_L45500_A_069_T10L00&layer=comp&$DWP_PRODUCT_REC_DESKTOP$" alt="">
+              <h4>Columbia Men's Big & Tall <br> Glennaker Lake Rain Jacket</h4>
+              <p>$48.00</p>
+          </a>
+          <a><img src="https://belk.scene7.com/is/image/Belk?layer=0&src=3205465_1861681_A_464&$DWP_PRODUCT_REC_DESKTOP$" alt="">
+              <h4>Columbia Men's Big & Tall <br> Glennaker Lake Rain Jacket</h4>
+              <p>$59.99</p>
+          </a>
+          <a><img src="https://belk.scene7.com/is/image/Belk?layer=0&src=3203315_WV424618H_A_155&$DWP_PRODUCT_REC_DESKTOP$" alt="">
+              <h4>Columbia Men's Big & Tall <br> Glennaker Lake Rain Jacket</h4>
+              <p>$59.99</p>
+          </a>    
+      </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+
 </body>
+<script
+  src="https://code.jquery.com/jquery-3.6.3.min.js"
+  integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
+  crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script type="text/javascript">
+      $('.slider2').slick({
+  slidesToShow: 4,
+  slidesToScroll: 1
+});
+
+var filtered = false;
+
+$('.js-filter').on('click', function(){
+  if (filtered === false) {
+    $('.filtering').slick('slickFilter',':even');
+    $(this).text('Unfilter Slides');
+    filtered = true;
+  } else {
+    $('.filtering').slick('slickUnfilter');
+    $(this).text('Filter Slides');
+    filtered = false;
+  }
+});
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </html>
