--- a/Cart/done.html
+++ b/Cart/done.html
@@ -11,12 +11,70 @@
     border: 1px solid rgb(255, 254, 254);
     height: 750px;
     background-image:
-    url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.wufoo.com%2Fblog%2Fpayment-processor-howto%2F&psig=AOvVaw3p578SYONG_tHrYxtDOKcB&ust=1677336936907000&source=images&cd=vfe&ved=0CA8QjRxqFwoTCMC3mpW1rv0CFQAAAAAdAAAAABAI");
+    url("https://media.giphy.com/media/UoXq47DGVhiEDbkm3n/giphy.gif");
 	background-size: cover;
 	background-repeat:no-repeat;
+    
 }
+body{
+    height: 500px;
+}
+#button-1{
+   margin-left: 40%;
+  margin-top: 50px;
+  margin-right: 40%;
+  /* border: 5px solid red; */
+  padding: 2%;
+  border-radius:15px;
+  background-color: rgb(14, 14, 194);
+   
+}
+#button-2{
+    margin-left: 40%;
+  margin-top: 50px;
+  margin-right: 40%;
+  /* border: 5px solid red; */
+  padding: 2%;
+  border-radius:15px;
+  background-color: rgb(14, 14, 194);;
+}
+#button-1 a{
+    display: block;
+    color: aliceblue;
+    padding: 3%;
+    border: 1px solid rgb(14, 14, 194);;
+    background-color: rgb(14, 14, 194);;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+}
+#button-1 a:hover {
+    background-color: white;
+    color: rgb(14, 14, 194);;
+    text-decoration: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+#button-2 a{
+    display: block;
+    color: aliceblue;
+    padding: 3%;
+    border: 1px solid rgb(14, 14, 194);;
+    background-color: rgb(14, 14, 194);;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+}
+#button-2 a:hover {
+    background-color: white;
+    color: #455A64;
+    text-decoration: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+
 </style>
 <body>
-    <button>Click Here to Land Page</button>
+   <div id="button-1" ><a href="" style="text-decoration: none;">Order placed successfully</a></div>
+   <div id="button-2"><a href="" style="text-decoration: none;">Click Here to Home Page</a></div>
+   
 </body>
 </html>
